youtube alignment issue fixed

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -810,7 +810,7 @@ iframe {
   width: 100%;
   overflow: hidden;
   aspect-ratio: 1;
-  height: 1200px;
+ 
 }
 hr {
   height: 2px;
